# ps3iso

./: .build.yml  .gitignore  LICENSE  Makefile  README.md  index.rst  modules.rst  pyproject.toml  requirements-dev.txt  requirements.dev.txt  setup.py
.github/workflows/: ci-test.yml  ci.yml  cleanup.yml
doc/src/: api.rst  cli.rst  conf.py  history.rst  index.rst
doc/src/exts/: generate_history.py
docs/: .readthedocs.yaml  requirements.txt
docs/src/: conf.py  index.rst
docs/src/exts/: exec_directive.py  generate_history.py  truncate_values.py
ps3iso/: __main__.py  game.py  info.py  rename.py  sfo.py
ps3iso/sfo/: _file.py  errors.py  file.py  parameters.py
test/: __main__.py  test_main.py
test/data/: PARAM.SFO.bak  PARAM.SFO.broken-magic  PARAM.SFO.invalid_ps3  PARAM.SFO.truncated  PARAM.SFO.variable-key
tests/: __main__.py  conftest.py  test_game.py  test_sfo_file.py
tests/data/: PARAM.SFO  PARAM.SFO.invalid_ps3
