[project]
name = "ps3iso"
version = "0.4.2"
licence = "MIT"
description = "CLI tool and Python library for managing Playstation 3 and PSP image files"
authors = [
    {name = "Kira Stover", email = "dev@kstover.net"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
license-files = ["LICEN[CS]E"]
keywords = ["SFO", "PS3"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.16",
]

[project.urls]
Homepage = "https://codeberg.org/kstover/ps3iso"
Documentation = "https://ps3iso.readthedocs.org"
Repository = "https://codeberg.org/kstover/ps3iso"
Issues = "https://codeberg.org/kstover/ps3iso/issues"

[project.scripts]
ps3iso = "ps3iso.__main__:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ps3iso"
module-root = ""

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]
lint = [
    "autoflake>=2.1.1",
    "mypy>=1.4.1",
]
test = [
    "coverage[toml]>=7.2.7",
    "pytest>=7.4.4",
    "vulture>=2.9.1",
]
docs = [
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinx-git>=11.0.0",
    "sphinx-sitemap>=2.5.0",
    "sphinxcontrib-apidoc>=0.3.0",
    "sphinxcontrib-autoprogram>=0.1.8",
    "sphinxcontrib-fulltoc>=1.2.0",
]

[tool.pytest.ini_options]
addopts = '--color=yes --doctest-modules --doctest-glob=README.*'

[tool.coverage.run]
command_line = "-m tests"
omit = ["*/__main__.py"]

[tool.mypy]
strict = true

[tool.autoflake]
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true

